src/test/deca/test_compilateur/syntax/invalid/created/miscellaneous/bad_lvalue.deca
// Description :
//    l'operande de gauche n'est pas une lvalue
//
// Resultats :
//		Syntaxe error

{
(a > b) = a;
}